--- a/public/css/kelolaPengguna.css
+++ b/public/css/kelolaPengguna.css
@@ -114,6 +114,22 @@ thead.thead-light th {
     display: none;
 }
 
+.modal-dialog {
+    max-width: 40%;
+    margin: 5vh auto;
+}
+
+.modal-content {
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    max-height: 70vh;
+    overflow-y: auto; /* Tambahkan scrollbar jika konten terlalu panjang */
+}
+
+.table-borderless th, .table-borderless td {
+    padding: 0.5rem 0.5rem;
+}
+
 
 /* SETIAP BUAT VIEW BARU HARAP COPAS CSS DIBAWAH INI KE BAWAHNYA DAN SESUAIKAN DENGAN ID TABLE */
 /* Mengatur lebar kolom pencarian */
